--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
 <head>
 	<title>Simon's Shop And Save</title>
-	<link rel:"stylesheet" type:"text/css" href:"css/css.main">
+	<link rel="stylesheet" type="text/css" href="css/main.css"
 </head>
 <body>
-<h1>Shop, and Save!</h1>
-<p>This is the low cost business of Simon, of Simon's Shop and Save!</p>
-
+<h1>Simon's Shop And Save</h1>
+<p>This is your low cost alternative to shopping, from Simon!</p>
 
 </body>
 </html>
