Tampering File Destination

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Simon's Shop And Save</title>
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 <h1>Simon's Shop And Save</h1>
