--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Simon's Shop And Save</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<h1>Simon's Shop And Save</h1>
-<p>This is your low cost alternative to shopping, from Simon!</p>
-
+	<h1>Simon's Shop And Save</h1>
+	<p>This is your low cost alternative to shopping, from Simon!</p>
 </body>
 </html>
