--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Podcast Locally</title>
-	<meta charset:"utf-8">
-	<link: rel:"stylesheet" type:"text/css" href:"css/style.css">
-
+	<meta charset="utf-8">
+	<title>Simon's Shop And Save</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<h1>Podcast Locally</h1>
-	<p>A Melbourne based Podcast Network</p>
-	<div name:"episode1"></div>
-	<div name:"episode2"></div>
-
+	<h1>Simon's Shop And Save</h1>
+	<p>This is your low cost alternative to shopping, from Simon!</p>
 </body>
 </html>
