--- a/index.html
+++ b/index.html
@@ -5,35 +5,45 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>PodCal.</title>
 </head>
+
 <body>
-	<h1>Po[d]Cal.</h1>
-	<ul id="directory">
-		<li>Book Studio Time</li>
-		<li>Subscribe</li>
-		<li>Who Are We?</li>
-		<li><a href="mailto:simon.mccul@gmail.com">Email Us</a></li>
-	</ul>
+	<header>
+		<h1>Po[d]Cal.</h1>
+	</header>
+	
+	<nav>
+		<ul>
+			<li>Book Studio Time</li>
+			<li>Subscribe</li>
+			<li>Who Are We?</li>
+			<li><a href="mailto:simon.mccul@gmail.com">Email Us</a></li>
+		</ul>
+	</nav>
+
 	<img src="images/episode.jpg" alt="Click To Listen" title="Listen!">
 	<p id="tagline">PodCal Is A Not For Profit Podcasting Organisation.<br>Book studio time or listen to others (for once).</p>
 	<p id="slogan">You've got a story.<br>We're listening.</p>
 
-	<ul id="episodes">
-		<li id="one">one</li>
-		<li id="two">two</li>
-		<li id="three">three</li>
+	<div class="episodes">
+		<ul class="episodes">
+			<li id="one">one</li>
+			<li id="two">two</li>
+			<li id="three">three</li>
 		
-		<li id="four">four</li>
-		<li id="five">five</li>
-		<li id="six">six</li>
+			<li id="four">four</li>
+			<li id="five">five</li>
+			<li id="six">six</li>
 		
-		<li id="seven">seven</li>
-		<li id="eight">eight</li>
-		<li id="nine">nine</li>
+			<li id="seven">seven</li>
+			<li id="eight">eight</li>
+			<li id="nine">nine</li>
 
-		<li id="ten">ten</li>
-		<li id="eleven">eleven</li>
-		<li id="twelve">twevle</li>
-	</ul>
+			<li id="ten">ten</li>
+			<li id="eleven">eleven</li>
+			<li id="twelve">twevle</li>
+		</ul>
+	</div>
+
 
 
 
