--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<header>
 		<h1>Po[d]Cal.</h1>
 	</header>
-	
 	<nav>
 		<ul>
 			<li>Book Studio Time</li>
@@ -19,34 +18,33 @@
 			<li><a href="mailto:simon.mccul@gmail.com">Email Us</a></li>
 		</ul>
 	</nav>
-
-	<img src="images/episode.jpg" alt="Click To Listen" title="Listen!">
-	<p id="tagline">PodCal Is A Not For Profit Podcasting Organisation.<br>Book studio time or listen to others (for once).</p>
-	<p id="slogan">You've got a story.<br>We're listening.</p>
-
-	<div class="episodes">
+	<section id="splash">
+		<img src="images/episode.jpg" alt="Click To Listen" title="Listen!">
+		<p id="tagline">PodCal Is A Not For Profit Podcasting Organisation.<br>Book studio time or listen to others (for once).</p>
+		<p id="slogan">You've got a story.<br>We're listening.</p>
+	</section>
+	<section>
+		<h2>Podcasts</h2>
 		<ul class="episodes">
 			<li id="one">one</li>
 			<li id="two">two</li>
 			<li id="three">three</li>
-		
+		</ul>
+		<ul class="episodes">
 			<li id="four">four</li>
 			<li id="five">five</li>
 			<li id="six">six</li>
-		
+		</ul>
+		<ul class="episodes">
 			<li id="seven">seven</li>
 			<li id="eight">eight</li>
 			<li id="nine">nine</li>
-
+		</ul>
+		<ul class="episodes">
 			<li id="ten">ten</li>
 			<li id="eleven">eleven</li>
 			<li id="twelve">twevle</li>
 		</ul>
-	</div>
-
-
-
-
-
+	</section>
 </body>
 </html>
