--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<p id="slogan">You've got a story.<br>We're listening.</p>
 		<p id="tagline">PodCal Is A Not For Profit Podcasting Organisation.<br>Book studio time or listen to others (for once).</p>
 	</section>
-	<section>
+	<section id="podcasts">
 		<h2>Podcasts</h2>
 		<ul class="episodes">
 			<li id="one">one</li>
