--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 	<header>
 		<h1>Po[d]Cal.</h1>
 	</header>
+
+	<section id="splash">
+		<img src="images/episode.jpg" alt="Click To Listen" title="Listen!">
+		<p id="slogan">You've got a story.<br>We're listening.</p>
+	</section>
+
 	<nav>
 		<ul>
 			<li>Book Studio Time</li>
@@ -18,32 +24,35 @@
 			<li><a href="mailto:simon.mccul@gmail.com">Email Us</a></li>
 		</ul>
 	</nav>
-	<section id="splash">
-		<img src="images/episode.jpg" alt="Click To Listen" title="Listen!">
-		<p id="slogan">You've got a story.<br>We're listening.</p>
-		<p id="tagline">PodCal Is A Not For Profit Podcasting Organisation.<br>Book studio time or listen to others (for once).</p>
-	</section>
+
+	<section id="footer">
+		<p>PodCal Is A Not For Profit Podcasting Organisation.<br>Book studio time, or listen to others (for once).</p>
+	</section>	
+
 	<section id="podcasts">
 		<h2>Podcasts</h2>
 		<ul class="episodes">
-			<li id="one">one</li>
-			<li id="two">two</li>
-			<li id="three">three</li>
+			<li id="one">
+				<h2>show title</h2>
+				<p>Episode One</p>
+			</li>
+			<li id="two">Episode two</li>
+			<li id="three">Episode three</li>
 		</ul>
 		<ul class="episodes">
-			<li id="four">four</li>
-			<li id="five">five</li>
-			<li id="six">six</li>
+			<li id="four">Episode four</li>
+			<li id="five">Episode five</li>
+			<li id="six">Episode six</li>
 		</ul>
 		<ul class="episodes">
-			<li id="seven">seven</li>
-			<li id="eight">eight</li>
-			<li id="nine">nine</li>
+			<li id="seven">Episode seven</li>
+			<li id="eight">Episode eight</li>
+			<li id="nine">Episode nine</li>
 		</ul>
 		<ul class="episodes">
-			<li id="ten">ten</li>
-			<li id="eleven">eleven</li>
-			<li id="twelve">twevle</li>
+			<li id="ten">Episode ten</li>
+			<li id="eleven">Episode eleven</li>
+			<li id="twelve">Episode twevle</li>
 		</ul>
 	</section>
 </body>
