--- a/index.html
+++ b/index.html
@@ -25,35 +25,80 @@
 		</ul>
 	</nav>
 
-	<section id="footer">
+	<section id="tagline">
 		<p>PodCal Is A Not For Profit Podcasting Organisation.<br>Book studio time, or listen to others (for once).</p>
 	</section>	
 
+	<h2>Podcasts</h2>
+	
 	<section id="podcasts">
-		<h2>Podcasts</h2>
+		
+		<div id="latest">
+
+			<ul class="episodes">
+				<li id="one">
+					<h3>show title</h3>
+					<p>Episode One</p>
+				</li>
+				<li id="two">
+					<h3>show title</h3>
+					<p>Episode two</p>
+				</li>
+				<li id="three">
+					<h3>show title</h3>
+					<p>Episode three</p>
+				</li>
+			</ul>
+		</div>
+
+		<div id="popular">
+
+			<ul class="episodes">
+				<li id="four">
+					<h3>show title</h3>
+					<p>Episode four</p>
+				</li>
+				<li id="five">
+					<h3>show title</h3>
+					<p>Episode five</p>
+				</li>
+				<li id="six">
+					<h3>show title</h3>
+					<p>Episode six</p>
+				</li>
+			</ul>
+		</div>
+
+
 		<ul class="episodes">
-			<li id="one">
-				<h2>show title</h2>
-				<p>Episode One</p>
+			<li id="seven">
+				<h3>show title</h3>
+				<p>Episode seven</p>
 			</li>
-			<li id="two">Episode two</li>
-			<li id="three">Episode three</li>
+			<li id="eight">
+				<h3>show title</h3>
+				<p>Episode eight</p>
+			</li>
+			<li id="nine">
+				<h3>show title</h3>
+				<p>Episode nine</p>
+			</li>
 		</ul>
 		<ul class="episodes">
-			<li id="four">Episode four</li>
-			<li id="five">Episode five</li>
-			<li id="six">Episode six</li>
-		</ul>
-		<ul class="episodes">
-			<li id="seven">Episode seven</li>
-			<li id="eight">Episode eight</li>
-			<li id="nine">Episode nine</li>
-		</ul>
-		<ul class="episodes">
-			<li id="ten">Episode ten</li>
-			<li id="eleven">Episode eleven</li>
-			<li id="twelve">Episode twevle</li>
+			<li id="ten">
+				<h3>show title</h3>
+				<p>Episode ten</p>
+			</li>
+			<li id="eleven">
+				<h3>show title</h3>
+				<p>Episode eleven</p>
+			</li>
+			<li id="twelve">
+				<h3>show title</h3>
+				<p>Episode twevle</p>
+			</li>
 		</ul>
 	</section>
+
 </body>
 </html>
