--- a/index.html
+++ b/index.html
@@ -29,27 +29,33 @@
 		<p>PodCal Is A Not For Profit Podcasting Organisation.<br>Book studio time, or listen to others (for once).</p>
 	</section>	
 
-	<h2>Podcasts</h2>
+	
 	
 	<section id="podcasts">
-		
-		<div id="latest">
-
-			<ul class="episodes">
-				<li id="one">
+		<h2>Podcasts</h2>
+		<section id="latest">
+			<section class="episodes">
+				<img src="images/episode.jpg" alt="Click To Listen" title="Listen!">
+				<div>
 					<h3>show title</h3>
 					<p>Episode One</p>
-				</li>
-				<li id="two">
+				</div>
+			</section>
+			<section class="episodes">
+				<img src="images/episode.jpg" alt="Click To Listen" title="Listen!">
+				<div>
 					<h3>show title</h3>
 					<p>Episode two</p>
-				</li>
-				<li id="three">
+				</div>
+			</section>
+			<section class="episodes">
+				<img src="images/episode.jpg" alt="Click To Listen" title="Listen!">
+				<div>
 					<h3>show title</h3>
 					<p>Episode three</p>
-				</li>
-			</ul>
-		</div>
+				</div>
+			</section>
+		</section>
 
 		<div id="popular">
 
