Nav Layout Change

--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
 	<header>
 		<h1>Po[d]Cal.</h1>
 	</header>
-
-	<section id="splash">
-		<img src="images/episode.jpg" alt="Click To Listen" title="Listen!">
-		<p id="slogan">You've got a story.<br>We're listening.</p>
-	</section>
-
+	
 	<nav>
 		<ul>
 			<li>Book Studio Time</li>
@@ -25,85 +20,124 @@
 		</ul>
 	</nav>
 
+	<section id="splash">
+		<img src="images/episode.jpg" alt="Click To Listen" title="Listen!">
+		<p id="slogan">You've got a story.<br>We're listening.</p>
+	</section>
+
 	<section id="tagline">
 		<p>PodCal Is A Not For Profit Podcasting Organisation.<br>Book studio time, or listen to others (for once).</p>
 	</section>	
 	
 	<section id="podcasts">
 		<h2>Podcasts</h2>
-		
+
 		<section id="latest">
+			<h2>Latest</h2>
+
 			<section class="episodes">
-				<img src="images/episode.jpg" alt="Click To Listen" title="Listen!">
+				<img src="images/E2.jpg" alt="Click To Listen" title="Listen!">
 				<div>
 					<h3>show title</h3>
 					<p>Episode One</p>
 				</div>
 			</section>
 			<section class="episodes">
-				<img src="images/episode.jpg" alt="Click To Listen" title="Listen!">
+				<img src="images/E2.jpg" alt="Click To Listen" title="Listen!">
 				<div>
 					<h3>show title</h3>
 					<p>Episode two</p>
 				</div>
 			</section>
 			<section class="episodes">
-				<img src="images/episode.jpg" alt="Click To Listen" title="Listen!">
+				<img src="images/E2.jpg" alt="Click To Listen" title="Listen!">
 				<div>
-
 					<h3>show title</h3>
 					<p>Episode three</p>
 				</div>
 			</section>
 		</section>
 
-		<div id="popular">
+		<section id="popular">
+			<h2>Popular</h2>
 
-			<ul class="episodes">
-				<li id="four">
+			<section class="episodes">
+				<img src="images/E5.jpg" alt="Click To Listen" title="listen!">
+				<div>
 					<h3>show title</h3>
 					<p>Episode four</p>
-				</li>
-				<li id="five">
+				</div>
+			</section>
+
+			<section class="episodes">
+				<img src="images/E5.jpg" alt="Click To Listen" title="listen!">
+				<div>
 					<h3>show title</h3>
 					<p>Episode five</p>
-				</li>
-				<li id="six">
+				</div>
+			</section>
+
+			<section class="episodes">
+				<img src="images/E5.jpg" alt="Click To Listen" title="listen!">
+				<div>
 					<h3>show title</h3>
 					<p>Episode six</p>
-				</li>
-			</ul>
-		</div>
+				</div>
+			</section>
+		</section>
 
+		<section id="More">
+			<h2>More!</h2>
 
-		<ul class="episodes">
-			<li id="seven">
-				<h3>show title</h3>
-				<p>Episode seven</p>
-			</li>
-			<li id="eight">
-				<h3>show title</h3>
-				<p>Episode eight</p>
-			</li>
-			<li id="nine">
-				<h3>show title</h3>
-				<p>Episode nine</p>
-			</li>
-		</ul>
-		<ul class="episodes">
-			<li id="ten">
-				<h3>show title</h3>
-				<p>Episode ten</p>
-			</li>
-			<li id="eleven">
-				<h3>show title</h3>
-				<p>Episode eleven</p>
-			</li>
-			<li id="twelve">
-				<h3>show title</h3>
-				<p>Episode twevle</p>
-			</li>
-		</ul>
+			<section class="episodes">
+				<img src="images/E1.png" alt="Click To Listen" title="listen!">
+				<div>
+					<h3>show title</h3>
+					<p>Episode seven</p>
+				</div>
+			</section>
+
+			<section class="episodes">
+				<img src="images/E4.jpg" alt="Click To Listen" title="listen!">
+				<div>
+					<h3>show title</h3>
+					<p>Episode eight</p>
+				</div>
+			</section>
+
+			<section class="episodes">
+				<img src="images/E2.jpg" alt="Click To Listen" title="listen!">
+				<div>
+					<h3>show title</h3>
+					<p>Episode nine</p>
+				</div>
+			</section>
+		
+			<section class="episodes">
+				<img src="images/E3.jpg" alt="Click To Listen" title="listen!">
+				<div>
+					<h3>show title</h3>
+					<p>Episode ten</p>
+				</div>
+			</section>
+
+			<section class="episodes">
+				<img src="images/E6.jpg" alt="Click To Listen" title="listen!">
+				<div>
+					<h3>show title</h3>
+					<p>Episode eleven</p>
+				</div>
+			</section>
+
+			<section class="episodes">
+				<img src="images/E1.png" alt="Click To Listen" title="listen!">
+				<div>
+					<h3>show title</h3>
+					<p>Episode twelve</p>
+				</div>
+			</section>
+		</section>
+
 	</section>
 
 </body>
