Unit Five Uploads/Styling

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<header>
 		<h1>Po[d]Cal.</h1>
 	</header>
-	
+
 	<nav>
-		<ul>
+		<ul id="navigation">
 			<li>Book Studio Time</li>
 			<li>Subscribe</li>
 			<li>Who Are We?</li>
@@ -21,12 +21,12 @@
 	</nav>
 
 	<section id="splash">
-		<img src="images/episode.jpg" alt="Click To Listen" title="Listen!">
-		<p id="slogan">You've got a story.<br>We're listening.</p>
-	</section>
+			<img src="images/episode.jpg" alt="Click To Listen" title="Listen!">
+			<p id="slogan">You've got a story.<br>We're listening.</p>
 
-	<section id="tagline">
-		<p>PodCal Is A Not For Profit Podcasting Organisation.<br>Book studio time, or listen to others (for once).</p>
+		<section id="tagline">
+			<p>PodCal Is A Not For Profit Podcasting Organisation.<br>Book studio time, or listen to others (for once).</p>
+			</section>
 	</section>	
 	
 	<section id="podcasts">
@@ -34,7 +34,6 @@
 
 		<section id="latest">
 			<h2>Latest</h2>
-
 			<section class="episodes">
 				<img src="images/E2.jpg" alt="Click To Listen" title="Listen!">
 				<div>
@@ -134,6 +133,22 @@
 				<div>
 					<h3>show title</h3>
 					<p>Episode twelve</p>
+				</div>
+			</section>
+
+			<section class="episodes">
+				<img src="images/E1.png" alt="Click To Listen" title="listen!">
+				<div>
+					<h3>show title</h3>
+					<p>Episode thirteen</p>
+				</div>
+			</section>
+
+			<section class="episodes">
+				<img src="images/E1.png" alt="Click To Listen" title="listen!">
+				<div>
+					<h3>show title</h3>
+					<p>Episode fourteen</p>
 				</div>
 			</section>
 		</section>
