--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 		<h1>Po[d]Cal.</h1>
 	</header>
 
+	<section id="splash" class="clearfix">
+			<img src="images/episode.jpg" alt="Click To Listen" title="Listen!">
+			<p id="slogan">You've got a story.<br>We're listening.</p>
 	<nav>
 		<ul id="navigation">
 			<li>Book Studio Time</li>
@@ -20,20 +23,12 @@
 		</ul>
 	</nav>
 
-	<section id="splash">
-			<img src="images/episode.jpg" alt="Click To Listen" title="Listen!">
-			<p id="slogan">You've got a story.<br>We're listening.</p>
-
-		<section id="tagline">
-			<p>PodCal Is A Not For Profit Podcasting Organisation.<br>Book studio time, or listen to others (for once).</p>
-			</section>
 	</section>	
 	
-	<section id="podcasts">
-		<h2>Podcasts</h2>
-
-		<section id="latest">
-			<h2>Latest</h2>
+	<section id="podcasts" class="clearfix">
+		
+		<section id="latest" class="clearfix">
+			<h2>Latest episodes</h2>
 			<section class="episodes">
 				<img src="images/E2.jpg" alt="Click To Listen" title="Listen!">
 				<div>
@@ -57,7 +52,8 @@
 			</section>
 		</section>
 
-		<section id="popular">
+
+		<section id="popular" class="clearfix">
 			<h2>Popular</h2>
 
 			<section class="episodes">
@@ -85,9 +81,9 @@
 			</section>
 		</section>
 
-		<section id="More">
+		<section id="More" class="clearfix">
 			<h2>More!</h2>
-
+			<div>
 			<section class="episodes">
 				<img src="images/E1.png" alt="Click To Listen" title="listen!">
 				<div>
@@ -151,9 +147,13 @@
 					<p>Episode fourteen</p>
 				</div>
 			</section>
+			</div>
 		</section>
-
 	</section>
+
+<footer>
+<p>Podcal is a not for profit podcasting organisation. Get involved, or just listen (for once)</p>
+</footer>
 
 </body>
 </html>
