--- a/index.html
+++ b/index.html
@@ -9,20 +9,19 @@
 <body>
 	<header>
 		<h1>Po[d]Cal.</h1>
+		<nav>
+			<ul id="navigation">
+				<li>Book Studio Time</li>
+				<li>Subscribe</li>
+				<li>Who Are We?</li>
+				<li><a href="mailto:simon.mccul@gmail.com">Email Us</a></li>
+			</ul>
+		</nav>
 	</header>
 
 	<section id="splash" class="clearfix">
 			<img src="images/episode.jpg" alt="Click To Listen" title="Listen!">
 			<p id="slogan">You've got a story.<br>We're listening.</p>
-	<nav>
-		<ul id="navigation">
-			<li>Book Studio Time</li>
-			<li>Subscribe</li>
-			<li>Who Are We?</li>
-			<li><a href="mailto:simon.mccul@gmail.com">Email Us</a></li>
-		</ul>
-	</nav>
-
 	</section>	
 	
 	<section id="podcasts" class="clearfix">
@@ -84,7 +83,7 @@
 		<section id="More" class="clearfix">
 			<h2>More!</h2>
 			<div>
-			<section class="episodes">
+			<section class="moreepisodes">
 				<img src="images/E1.png" alt="Click To Listen" title="listen!">
 				<div>
 					<h3>show title</h3>
@@ -92,7 +91,7 @@
 				</div>
 			</section>
 
-			<section class="episodes">
+			<section class="moreepisodes">
 				<img src="images/E4.jpg" alt="Click To Listen" title="listen!">
 				<div>
 					<h3>show title</h3>
@@ -100,7 +99,7 @@
 				</div>
 			</section>
 
-			<section class="episodes">
+			<section class="moreepisodes">
 				<img src="images/E2.jpg" alt="Click To Listen" title="listen!">
 				<div>
 					<h3>show title</h3>
@@ -108,7 +107,7 @@
 				</div>
 			</section>
 		
-			<section class="episodes">
+			<section class="moreepisodes">
 				<img src="images/E3.jpg" alt="Click To Listen" title="listen!">
 				<div>
 					<h3>show title</h3>
@@ -116,7 +115,7 @@
 				</div>
 			</section>
 
-			<section class="episodes">
+			<section class="moreepisodes">
 				<img src="images/E6.jpg" alt="Click To Listen" title="listen!">
 				<div>
 					<h3>show title</h3>
@@ -124,7 +123,7 @@
 				</div>
 			</section>
 
-			<section class="episodes">
+			<section class="moreepisodes">
 				<img src="images/E1.png" alt="Click To Listen" title="listen!">
 				<div>
 					<h3>show title</h3>
@@ -132,7 +131,7 @@
 				</div>
 			</section>
 
-			<section class="episodes">
+			<section class="moreepisodes">
 				<img src="images/E1.png" alt="Click To Listen" title="listen!">
 				<div>
 					<h3>show title</h3>
@@ -140,7 +139,7 @@
 				</div>
 			</section>
 
-			<section class="episodes">
+			<section class="moreepisodes">
 				<img src="images/E1.png" alt="Click To Listen" title="listen!">
 				<div>
 					<h3>show title</h3>
