--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	</header>
 
 	<section id="splash" class="clearfix">
-			<img src="images/episode.jpg" alt="Click To Listen" title="Listen!">
 			<p id="slogan">You've got a story.<br>We're listening.</p>
+			<p id="tagline">A Not For Profit Podcasting Org.</p>
 	</section>	
 	
 	<section id="podcasts" class="clearfix">
@@ -50,7 +50,6 @@
 				</div>
 			</section>
 		</section>
-
 
 		<section id="popular" class="clearfix">
 			<h2>Popular</h2>
