--- a/index.html
+++ b/index.html
@@ -1,157 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<title>PodCal.</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" type:="text/css" href="style.css">
+	<title>Warrensville Poll Herefords</title>
 </head>
 
 <body>
-	<header>
-		<h1>Po[d]Cal.</h1>
-		<nav>
-			<ul id="navigation">
-				<li>Book Studio Time</li>
-				<li>Subscribe</li>
-				<li>Who Are We?</li>
-				<li><a href="mailto:simon.mccul@gmail.com">Email Us</a></li>
-			</ul>
-		</nav>
-	</header>
+	<div id="logo" class="clearfix">
+		<img src="images/logo.png">
+		<h1>Warrensville Poll Herefords</h1>
+	</div>
 
-	<section id="splash" class="clearfix">
-			<p id="slogan">You've got a story.<br>We're listening.</p>
-			<p id="tagline">A Not For Profit Podcasting Org.</p>
-	</section>	
-	
-	<section id="podcasts" class="clearfix">
-		
-		<section id="latest" class="clearfix">
-			<h2>Latest episodes</h2>
-			<section class="episodes">
-				<img src="images/E2.jpg" alt="Click To Listen" title="Listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode One</p>
-				</div>
-			</section>
-			<section class="episodes">
-				<img src="images/E2.jpg" alt="Click To Listen" title="Listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode two</p>
-				</div>
-			</section>
-			<section class="episodes">
-				<img src="images/E2.jpg" alt="Click To Listen" title="Listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode three</p>
-				</div>
-			</section>
-		</section>
+	<nav>
+		<a href="sales.html">sales</a>
+		<a href="#">contact</a>
+		<a href="#">history</a>
+		<a href="#">news</a>
+	</nav>
 
-		<section id="popular" class="clearfix">
-			<h2>Popular</h2>
-
-			<section class="episodes">
-				<img src="images/E5.jpg" alt="Click To Listen" title="listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode four</p>
-				</div>
-			</section>
-
-			<section class="episodes">
-				<img src="images/E5.jpg" alt="Click To Listen" title="listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode five</p>
-				</div>
-			</section>
-
-			<section class="episodes">
-				<img src="images/E5.jpg" alt="Click To Listen" title="listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode six</p>
-				</div>
-			</section>
-		</section>
-
-		<section id="More" class="clearfix">
-			<h2>More!</h2>
-			<div>
-			<section class="moreepisodes">
-				<img src="images/E1.png" alt="Click To Listen" title="listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode seven</p>
-				</div>
-			</section>
-
-			<section class="moreepisodes">
-				<img src="images/E4.jpg" alt="Click To Listen" title="listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode eight</p>
-				</div>
-			</section>
-
-			<section class="moreepisodes">
-				<img src="images/E2.jpg" alt="Click To Listen" title="listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode nine</p>
-				</div>
-			</section>
-		
-			<section class="moreepisodes">
-				<img src="images/E3.jpg" alt="Click To Listen" title="listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode ten</p>
-				</div>
-			</section>
-
-			<section class="moreepisodes">
-				<img src="images/E6.jpg" alt="Click To Listen" title="listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode eleven</p>
-				</div>
-			</section>
-
-			<section class="moreepisodes">
-				<img src="images/E1.png" alt="Click To Listen" title="listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode twelve</p>
-				</div>
-			</section>
-
-			<section class="moreepisodes">
-				<img src="images/E1.png" alt="Click To Listen" title="listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode thirteen</p>
-				</div>
-			</section>
-
-			<section class="moreepisodes">
-				<img src="images/E1.png" alt="Click To Listen" title="listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode fourteen</p>
-				</div>
-			</section>
-			</div>
-		</section>
+	<div id="splash" class="clearfix">
+	<section id="intro">
+		<h2>Welcome To Herefords Quality Livestock</h2>
+		<p>Sed quod proximum fuit non vidit. Ad eas enim res ab Epicuro praecepta dantur. Septem autem illi non suo, sed populorum suffragio omnium nominati sunt. Itaque hic ipse iam pridem est reiectus; Non enim iam stirpis bonum quaeret, sed animalis.</p>
 	</section>
-
-<footer>
-<p>Podcal is a not for profit podcasting organisation. Get involved, or just listen (for once)</p>
-</footer>
+	</div>
 
 </body>
 </html>
