--- a/Podcal/index.html
+++ b/Podcal/index.html
@@ -7,24 +7,23 @@
 </head>
 
 <body>
-	<header>
+	<header class="clearfix">
 		<h1>Po[d]Cal.</h1>
-		<nav>
-			<ul id="navigation">
-				<li>Book Studio Time</li>
-				<li>Subscribe</li>
-				<li>Who Are We?</li>
-				<li><a href="mailto:simon.mccul@gmail.com">Email Us</a></li>
-			</ul>
-		</nav>
 	</header>
 
-	<section id="splash" class="clearfix">
-			<p id="slogan">You've got a story.<br>We're listening.</p>
-			<p id="tagline">A Not For Profit Podcasting Org.</p>
-	</section>	
+	<div id="splash" class="clearfix">
+		<section id="new">
+		<h2>Featured Episode</h2>
+		</section>
+		<p id="slogan">You've got a story.<br>We're listening.</p>
+		<nav id="navigation">
+				<a href="#">Who We Are</a>
+				<a href="#">Get Involved</a>
+				<a href="mailto:simon.mccul@gmail.com">Contact</a>
+		</nav>
+	</div>	
 	
-	<section id="podcasts" class="clearfix">
+	<div id="podcasts" class="clearfix">	
 		
 		<section id="latest" class="clearfix">
 			<h2>Latest episodes</h2>
@@ -78,10 +77,11 @@
 				</div>
 			</section>
 		</section>
+	</div>
 
-		<section id="More" class="clearfix">
-			<h2>More!</h2>
-			<div>
+		<div id="programs" class="clearfix">
+		<section id="More">
+			<h2>Our Network</h2>
 			<section class="moreepisodes">
 				<img src="images/E1.png" alt="Click To Listen" title="listen!">
 				<div>
@@ -145,9 +145,9 @@
 					<p>Episode fourteen</p>
 				</div>
 			</section>
-			</div>
 		</section>
-	</section>
+	</div>
+
 
 <footer>
 <p>Podcal is a not for profit podcasting organisation. Get involved, or just listen (for once)</p>
