--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<nav id="navigation">
 				<a href="#">Who We Are</a>
 				<a href="#">Get Involved</a>
-				<a href="mailto:simon.mccul@gmail.com">Contact</a>
+				<a href="mailto:simon.mccul@gmail.com">Contact Us</a>
 		</nav>
 	</div>	
 	
