--- a/index.html
+++ b/index.html
@@ -13,12 +13,19 @@
 
 	<div id="splash" class="clearfix">
 		<section id="new">
-		<h2>Featured Episode</h2>
+			<h2>Featured Episode</h2>
+			<img src="images/E6.jpg" alt="Click To Listen" title="listen!">
+			<div>
+				<h3>Show Title</h3>
+				<p>Episode 3: Explainer</p>
+				<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/34019569&color=0066cc"></iframe>
+			<div>
 		</section>
 		<p id="slogan">You've got a story.<br>We're listening.</p>
 		<nav id="navigation">
 				<a href="#">Who We Are</a>
 				<a href="#">Get Involved</a>
+				<a href="#">Blog</a>
 				<a href="mailto:simon.mccul@gmail.com">Contact Us</a>
 		</nav>
 	</div>	
@@ -79,7 +86,7 @@
 		</section>
 	</div>
 
-		<div id="programs" class="clearfix">
+	<div id="programs" class="clearfix">
 		<section id="More">
 			<h2>Our Network</h2>
 			<section class="moreepisodes">
