--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width" initial-scale="1">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>PodCal.</title>
 </head>
@@ -9,29 +10,28 @@
 <body>
 	<header class="clearfix">
 		<h1>Po[d]Cal.</h1>
-	</header>
-
-	<div id="splash" class="clearfix">
-		<section id="new">
-			<h2>Featured Episode</h2>
-			<img src="images/E6.jpg" alt="Click To Listen" title="listen!">
-			<div>
-				<h3>Show Title</h3>
-				<p>Episode 3: Explainer</p>
-				<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/34019569&color=0066cc"></iframe>
-			<div>
-		</section>
-		<p id="slogan">You've got a story.<br>We're listening.</p>
-		<nav id="navigation">
+			<nav id="navigation">
 				<a href="#">Who We Are</a>
 				<a href="#">Get Involved</a>
 				<a href="#">Blog</a>
 				<a href="mailto:simon.mccul@gmail.com">Contact Us</a>
-		</nav>
-	</div>	
-	
-	<div id="podcasts" class="clearfix">	
-		
+			</nav>
+	</header>
+	<section id="splash" class="clearfix">
+		<div class="wrappernew">
+			<section id="new">
+				<h2>Featured Episode</h2>
+				<div>
+					<h3>Show Title</h3>
+					<p>Episode 3: Explainer</p>
+					<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/34019569&color=0066cc"></iframe>
+				</div>
+			</section>
+		</div>
+	</section>
+
+	<div class="wrapper">	
+	<div id="podcasts" class="clearfix">
 		<section id="latest" class="clearfix">
 			<h2>Latest episodes</h2>
 			<section class="episodes">
@@ -84,76 +84,69 @@
 				</div>
 			</section>
 		</section>
+		</div>
 	</div>
 
-	<div id="programs" class="clearfix">
-		<section id="More">
-			<h2>Our Network</h2>
-			<section class="moreepisodes">
-				<img src="images/E1.png" alt="Click To Listen" title="listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode seven</p>
-				</div>
-			</section>
+	<section id="programs" class="clearfix">
+			<section id="More">
+				<h2>Our Network</h2>
+				<section class="shows">
+					<img src="images/E1.png" alt="Click To Listen" title="listen!">
+					<div>
+						<h3>show title</h3>
+					</div>
+				</section>
 
-			<section class="moreepisodes">
-				<img src="images/E4.jpg" alt="Click To Listen" title="listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode eight</p>
-				</div>
-			</section>
+				<section class="shows">
+					<img src="images/E4.jpg" alt="Click To Listen" title="listen!">
+					<div>
+						<h3>show title</h3>
+					</div>
+				</section>
 
-			<section class="moreepisodes">
-				<img src="images/E2.jpg" alt="Click To Listen" title="listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode nine</p>
-				</div>
-			</section>
-		
-			<section class="moreepisodes">
-				<img src="images/E3.jpg" alt="Click To Listen" title="listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode ten</p>
-				</div>
-			</section>
+				<section class="shows">
+					<img src="images/E2.jpg" alt="Click To Listen" title="listen!">
+					<div>
+						<h3>show title</h3>
+					</div>
+				</section>
+			
+				<section class="shows">
+					<img src="images/E3.jpg" alt="Click To Listen" title="listen!">
+					<div>
+						<h3>show title</h3>
+					</div>
+				</section>
 
-			<section class="moreepisodes">
-				<img src="images/E6.jpg" alt="Click To Listen" title="listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode eleven</p>
-				</div>
-			</section>
+				<section class="shows">
+					<img src="images/E6.jpg" alt="Click To Listen" title="listen!">
+					<div>
+						<h3>show title</h3>
+					</div>
+				</section>
 
-			<section class="moreepisodes">
-				<img src="images/E1.png" alt="Click To Listen" title="listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode twelve</p>
-				</div>
-			</section>
+				<section class="shows">
+					<img src="images/E1.png" alt="Click To Listen" title="listen!">
+					<div>
+						<h3>show title</h3>
+					</div>
+				</section>
 
-			<section class="moreepisodes">
-				<img src="images/E1.png" alt="Click To Listen" title="listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode thirteen</p>
-				</div>
-			</section>
+				<section class="shows">
+					<img src="images/E1.png" alt="Click To Listen" title="listen!">
+					<div>
+						<h3>show title</h3>
+					</div>
+				</section>
 
-			<section class="moreepisodes">
-				<img src="images/E1.png" alt="Click To Listen" title="listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode fourteen</p>
-				</div>
+				<section class="shows">
+					<img src="images/E1.png" alt="Click To Listen" title="listen!">
+					<div>
+						<h3>show title</h3>
+					</div>
+				</section>
 			</section>
-		</section>
-	</div>
+	</section>
 
 
 <footer>
