Responsive Added Shows

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		</div>
 	</div>
 
-	<section id="programs" class="clearfix">
+	<section id="programming" class="clearfix">
 			<section id="More">
 				<h2>Our Network</h2>
 				<section class="shows">
@@ -141,6 +141,20 @@
 
 				<section class="shows">
 					<img src="images/E1.png" alt="Click To Listen" title="listen!">
+					<div>
+						<h3>show title</h3>
+					</div>
+				</section>
+
+				<section class="shows">
+					<img src="images/E4.jpg" alt="Click To Listen" title="listen!">
+					<div>
+						<h3>show title</h3>
+					</div>
+				</section>
+
+				<section class="shows">
+					<img src="images/E3.jpg" alt="Click To Listen" title="listen!">
 					<div>
 						<h3>show title</h3>
 					</div>
