--- a/index.html
+++ b/index.html
@@ -31,63 +31,64 @@
 	</section>
 
 	<div class="wrapper">	
-	<div id="podcasts" class="clearfix">
-		<section id="latest" class="clearfix">
-			<h2>Latest episodes</h2>
-			<section class="episodes">
-				<img src="images/E2.jpg" alt="Click To Listen" title="Listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode One</p>
-				</div>
-			</section>
-			<section class="episodes">
-				<img src="images/E2.jpg" alt="Click To Listen" title="Listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode two</p>
-				</div>
-			</section>
-			<section class="episodes">
-				<img src="images/E2.jpg" alt="Click To Listen" title="Listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode three</p>
-				</div>
-			</section>
-		</section>
-
-		<section id="popular" class="clearfix">
-			<h2>Popular</h2>
-
-			<section class="episodes">
-				<img src="images/E5.jpg" alt="Click To Listen" title="listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode four</p>
-				</div>
+		<div id="podcasts" class="clearfix">
+			<section id="latest" class="clearfix">
+				<h2>Latest episodes</h2>
+				<section class="episodes">
+					<img src="images/E2.jpg" alt="Click To Listen" title="Listen!">
+					<div>
+						<h3>show title</h3>
+						<p>Episode One</p>
+					</div>
+				</section>
+				<section class="episodes">
+					<img src="images/E2.jpg" alt="Click To Listen" title="Listen!">
+					<div>
+						<h3>show title</h3>
+						<p>Episode two</p>
+					</div>
+				</section>
+				<section class="episodes">
+					<img src="images/E2.jpg" alt="Click To Listen" title="Listen!">
+					<div>
+						<h3>show title</h3>
+						<p>Episode three</p>
+					</div>
+				</section>
 			</section>
 
-			<section class="episodes">
-				<img src="images/E5.jpg" alt="Click To Listen" title="listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode five</p>
-				</div>
-			</section>
+			<section id="popular" class="clearfix">
+				<h2>Popular</h2>
 
-			<section class="episodes">
-				<img src="images/E5.jpg" alt="Click To Listen" title="listen!">
-				<div>
-					<h3>show title</h3>
-					<p>Episode six</p>
-				</div>
+				<section class="episodes">
+					<img src="images/E5.jpg" alt="Click To Listen" title="listen!">
+					<div>
+						<h3>show title</h3>
+						<p>Episode four</p>
+					</div>
+				</section>
+
+				<section class="episodes">
+					<img src="images/E5.jpg" alt="Click To Listen" title="listen!">
+					<div>
+						<h3>show title</h3>
+						<p>Episode five</p>
+					</div>
+				</section>
+
+				<section class="episodes">
+					<img src="images/E5.jpg" alt="Click To Listen" title="listen!">
+					<div>
+						<h3>show title</h3>
+						<p>Episode six</p>
+					</div>
+				</section>
 			</section>
-		</section>
 		</div>
 	</div>
 
-	<section id="programming" class="clearfix">
+	<div class="wrapperprogramming">	
+		<section id="programming" class="clearfix">
 			<section id="More">
 				<h2>Our Network</h2>
 				<section class="shows">
@@ -160,8 +161,8 @@
 					</div>
 				</section>
 			</section>
-	</section>
-
+		</section>
+	</div>
 
 <footer>
 <p>Podcal is a not for profit podcasting organisation. Get involved, or just listen (for once)</p>
