--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 	<header class="clearfix">
-		<h1>Po[d]Cal.</h1>
+		<img src="images/logo6.png">
 			<nav id="navigation">
 				<a href="#">Who We Are</a>
 				<a href="#">Get Involved</a>
