--- a/index.html
+++ b/index.html
@@ -165,7 +165,11 @@
 	</div>
 
 <footer>
-<p>Podcal is a not for profit podcasting organisation. Get involved, or just listen (for once)</p>
+	<p>Podcal is a not for profit podcasting organisation. Get involved, or just listen (for once)</p>
+		<a href="#">Who We Are</a>
+		<a href="#">Get Involved</a>
+		<a href="#">Blog</a>
+		<a href="mailto:simon.mccul@gmail.com">Contact Us</a>
 </footer>
 
 </body>
