Logo and Responsive

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width" initial-scale="1">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/responsive.css">
 	<title>PodCal.</title>
 </head>
 
 <body>
 	<header class="clearfix">
-		<img src="images/logo6.png">
+		<img src="images/logo10.png">
 			<nav id="navigation">
 				<a href="#">Who We Are</a>
 				<a href="#">Get Involved</a>
